--- a/front-end-203/src/flight-search/flight-info-card/FlightInfoCard.css
+++ b/front-end-203/src/flight-search/flight-info-card/FlightInfoCard.css
@@ -5,11 +5,11 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 60%;
     background-color: #003c7c; /* Updated background color to blue */
     border-radius: 8px;
-    margin: 50px;
-    padding: 5px;
+    padding-inline: 30px;
+    padding-inline-end: 50px;
+
     
   }
   
