--- a/front-end-203/src/flight-search/flight-search-bar/FlightSearchBar.css
+++ b/front-end-203/src/flight-search/flight-search-bar/FlightSearchBar.css
@@ -5,7 +5,6 @@
   background: white;
   color: black;
   padding: 5px;
-  width: 70%;
   border-radius: 10px;
   margin-left: 20px;
   font-family: 'Merriweather Sans'; /* Use Merriweather font for all text */
